Fixed header / navigation z-index problem for IE.

--- a/plonetheme/onegov/resources/css/main.css
+++ b/plonetheme/onegov/resources/css/main.css
@@ -217,6 +217,10 @@ a,
 
 /* @end */
 /* @group header */
+#header {
+  position: relative;
+  z-index: 2; }
+
 #header-delimiter {
   border-top: 5px solid #006fba; }
 
